plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.146'
    id 'idea'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

sourceSets.main.resources {
    srcDir('src/generated/resources')
    exclude("**/*.bbmodel")
    exclude("src/generated/**/.cache")
}

repositories {
    maven {
        name = "BlameJared"
        url = "https://maven.blamejared.com"
        content { includeGroup "mezz.jei" }
    }

    exclusiveContent {
        forRepository {
            maven {
                name = "Modrinth"
                url = "https://api.modrinth.com/maven"
            }
        }
        filter { includeGroup "maven.modrinth" }
    }

    exclusiveContent {
        forRepository {
            maven {
                name = "GeckoLib"
                url = "https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/"
            }
        }
        filter { includeGroupAndSubgroups "software.bernie.geckolib" }
    }

    maven {
        name = "Shedaniel"
        url = "https://maven.shedaniel.me/"
        content { includeGroup "me.shedaniel.cloth" }
    }
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

dependencies {
    // Alpha 1.0.9 required platform. These are deliberate hard dependencies.
    implementation "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"
    implementation "maven.modrinth:nvQzSEkH:${jade_modrinth_version}"
    implementation "software.bernie.geckolib:geckolib-neoforge-${minecraft_version}:${geckolib_version}"
    implementation "me.shedaniel.cloth:cloth-config-neoforge:${cloth_config_version}"
    implementation "maven.modrinth:fusion-connected-textures:${fusion_maven_version}"
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            jei_version            : jei_version,
            jade_version           : jade_version,
            geckolib_version       : geckolib_version,
            cloth_config_version   : cloth_config_version,
            fusion_version         : fusion_version,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}
sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

def generateValidationStructures = tasks.register("generateValidationStructures", Exec) {
    group = "verification"
    description = "Generate reusable RSE Validation Factory structure templates."
    workingDir project.projectDir
    commandLine "python3", "tools/rse_validation_factory.py", "generate"
    inputs.file("tools/rse_validation_factory.py")
    outputs.dir("src/generated/resources/data/redstoneengineering/structure/validation")
}

tasks.named("processResources").configure {
    dependsOn(generateValidationStructures)
}

tasks.register("packageValidationWorld", Exec) {
    group = "verification"
    description = "Package an existing Minecraft-created RSE Validation Factory save."
    dependsOn(generateValidationStructures)
    workingDir project.projectDir
    commandLine "python3", "tools/rse_validation_factory.py", "package", "--world", "run/saves/RSE Validation Factory"
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url = uri("file://${project.projectDir}/repo")
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += ['-Xlint:deprecation']
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
